Fixed some overflow: scroll problems on browsers that don't support flexbox yet

--- a/assets/css/core.less
+++ b/assets/css/core.less
@@ -530,7 +530,6 @@ form.invite, .preview-container {
               vertical-align: top;
               width: 420px;
               float: left;
-              overflow: scroll;
             }
         }
     }
