--- a/assets/css/events.less
+++ b/assets/css/events.less
@@ -48,7 +48,7 @@
           width: 400px;
           height: 220px;
           float: left;
-          overflow: scroll;
+          overflow: hidden;
         }
     }
 }
