--- a/assets/css/speakers.less
+++ b/assets/css/speakers.less
@@ -55,7 +55,7 @@
           width: 400px;
           height: 220px;
           float: left;
-          overflow: scroll;
+          overflow: hidden;
         }
     }
 }
