--- a/assets/css/talks.less
+++ b/assets/css/talks.less
@@ -207,7 +207,7 @@
           width: 420px;
           height: 380px;
           float: left;
-          overflow: scroll;
+          overflow: hidden;
         }
     }
 }
